--- a/board/SConscript
+++ b/board/SConscript
@@ -2,7 +2,7 @@ import os
 import subprocess
 
 PREFIX = "arm-none-eabi-"
-BUILDER = "DGM"
+BUILDER = "DEV"
 
 common_flags = []
 build_projects = {}
